[package]
name = "blåhaj-parser"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
serde = "1.0.147"
scraper = "0.13.0"
tokio = { version = "1", features = ["full"] }
